Updated Design of OrderAddInfoDesign

--- a/XamarinTodo/XamarinTodo/XamarinTodo/Pages/OrderAcceptedPage.xaml
+++ b/XamarinTodo/XamarinTodo/XamarinTodo/Pages/OrderAcceptedPage.xaml
@@ -23,8 +23,8 @@
             <!--Content-->
 
             <StackLayout>
-                <StackLayout BackgroundColor="#53dc98" HeightRequest="100">
-                    <Label Text="Order Information" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" FontSize="30" TextColor="white" FontAttributes="Bold" />
+                <StackLayout BackgroundColor="#53dc98" HeightRequest="50">
+                    <Label Text="Order Information" HorizontalOptions="CenterAndExpand" VerticalOptions="StartAndExpand" FontSize="30" TextColor="white" FontAttributes="Bold" />
                 </StackLayout>
                 <Frame BackgroundColor="#53dc98" CornerRadius="5" Margin="15">
                     <StackLayout>
