La till /start högst up i navlink

--- a/NewBlazorTodo/NewBlazorTodo/Client/Shared/MainLayout.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Shared/MainLayout.razor
@@ -10,7 +10,7 @@
         <label>Inloggad med ID: @SetCurrentUser.Id som @SetCurrentUser.FirstName @SetCurrentUser.LastName </label>
         <br />
         
-        <a class="btn btn-success" @onclick="@LogoutCurrentUser">Logout @SetCurrentUser.FirstName</a>
+        <a class="btn btn-success" @onclick="@LogoutCurrentUser">Logga ut @SetCurrentUser.FirstName</a>
 
     </div>
     
