--- a/XamarinTodo/XamarinTodo/XamarinTodo/Pages/OrderDoneAddInfoPage.xaml
+++ b/XamarinTodo/XamarinTodo/XamarinTodo/Pages/OrderDoneAddInfoPage.xaml
@@ -3,26 +3,39 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="XamarinTodo.Pages.OrderDoneAddInfoPage">
     <ContentPage.Content>
-        <Frame BackgroundColor="AntiqueWhite" CornerRadius="5">
-            <StackLayout>
-                <StackLayout BackgroundColor="#53dc98" HeightRequest="50">
-                    <Label Text="Lägg till Information" HorizontalOptions="CenterAndExpand" VerticalOptions="StartAndExpand" FontSize="30" />
-                </StackLayout>
-                
+
+        <StackLayout>
+            <StackLayout BackgroundColor="#53dc98" HeightRequest="50">
+                <Label Text="Lägg till Information" HorizontalOptions="CenterAndExpand" VerticalOptions="StartAndExpand" FontSize="30" TextColor="white" />
+            </StackLayout>
+            <Frame CornerRadius="5">
                 <StackLayout>
-                    <!--Lägg till label med rubrik-->
-                    <Label Text="Order start:"/>
-                    <Label x:Name="LabelOrderStart"/>
-                    <Label Text="Order slut:"/>
-                    <Label x:Name="LabelOrderEnd"/>
-                </StackLayout>
-                <Editor x:Name="txtOrderCompleteMessage" Placeholder="Vilket arbete har utförts?" Margin="40, 0" AutoSize="TextChanges"
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="10*" />
+                            <RowDefinition Height="20*" />
+                            <RowDefinition Height="60*" />
+                            <RowDefinition Height="10*" />
+                        </Grid.RowDefinitions>
+                        <StackLayout Grid.Row="0">
+                            <Label Text="Order start:" FontSize="18" FontAttributes="Bold" />
+                            <Label x:Name="LabelOrderStart" FontSize="18" />
+                            <Label Text="Order slut:" FontSize="18" FontAttributes="Bold" />
+                            <Label x:Name="LabelOrderEnd" FontSize="18" />
+                        </StackLayout>
+                        <StackLayout Grid.Row="2">
+                            <Editor x:Name="txtOrderCompleteMessage" Placeholder="Vilket arbete har utförts?" AutoSize="TextChanges"
                     VerticalOptions="StartAndExpand" />
-                <Button Text="Skicka"
+                        </StackLayout>
+                        <StackLayout Grid.Row="3" VerticalOptions="EndAndExpand">
+                            <Button Text="Skicka"
                     CornerRadius="15"
                     VerticalOptions="End"
                     Clicked="ConfirmInfo_Clicked" />
-            </StackLayout>
-        </Frame>
+                        </StackLayout>
+                    </Grid>
+                </StackLayout>
+            </Frame>
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
