--- a/XamarinTodo/XamarinTodo/XamarinTodo/Pages/OrderPendingPage.xaml
+++ b/XamarinTodo/XamarinTodo/XamarinTodo/Pages/OrderPendingPage.xaml
@@ -29,8 +29,8 @@
                 <Frame BackgroundColor="#FDFD96" CornerRadius="5" Margin="15">
                     <StackLayout>
                         <StackLayout Padding="10">
-                            <Label x:Name="LabelCustomerName" FontSize="20" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" Margin="0, 10" />
                             <Label Text="Kontakt information" FontAttributes="Bold" FontSize="18" />
+                            <Label x:Name="LabelCustomerName" FontSize="18" />
                             <Label x:Name="LabelAdress" FontSize="18" />
                             <Label x:Name="LabelContactPerson" FontSize="18" />
                             <Label x:Name="LabelPhone" FontSize="18" />
