--- a/XamarinTodo/XamarinTodo/XamarinTodo/Pages/OrderOverviewPage.xaml
+++ b/XamarinTodo/XamarinTodo/XamarinTodo/Pages/OrderOverviewPage.xaml
@@ -22,39 +22,41 @@
                 <Label Text="Mina Ordrar" Grid.Column="1" HorizontalOptions="CenterAndExpand" VerticalOptions="StartAndExpand" FontSize="30" Margin="15" TextColor="white" FontAttributes="Bold" />
                 <Button Text="Logga ut" Grid.Column="2" HorizontalOptions="Center" VerticalOptions="Start" TextColor="white" FontAttributes="Bold" BackgroundColor="Transparent" Clicked="LogOutBtn_Clicked" />
             </Grid>
-
-            <CollectionView x:Name="orderOverviewList"
+            <!--<RefreshView x:Name="OrdersRefreshView" IsRefreshing="{Binding IsRefreshing}"
+                         Command="{Binding RefreshCommand}">-->
+                <CollectionView x:Name="orderOverviewList"
                             SelectionMode="Single"
                             SelectionChanged="orderOverviewList_SelectionChanged">
-                <CollectionView.ItemsLayout>
-                    <LinearItemsLayout ItemSpacing="25" Orientation="Vertical" />
-                </CollectionView.ItemsLayout>
+                    <CollectionView.ItemsLayout>
+                        <LinearItemsLayout ItemSpacing="25" Orientation="Vertical" />
+                    </CollectionView.ItemsLayout>
 
-                <CollectionView.ItemTemplate>
-                    <DataTemplate>
-                        <StackLayout Margin="5, 10">
-                            <Label Text="{Binding OrderStart}" FontSize="15" HorizontalOptions="StartAndExpand" VerticalOptions="EndAndExpand" Margin="10, 0" />
-                            <Frame BackgroundColor="{Binding BgColor, Converter={StaticResource BackgroundConverter}}">
-                                <StackLayout>
-                                    <!--<StackLayout Orientation="Horizontal">
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <StackLayout Margin="5, 10">
+                                <Label Text="{Binding OrderStart}" FontSize="15" HorizontalOptions="StartAndExpand" VerticalOptions="EndAndExpand" Margin="10, 0" />
+                                <Frame BackgroundColor="{Binding BgColor, Converter={StaticResource BackgroundConverter}}">
+                                    <StackLayout>
+                                        <!--<StackLayout Orientation="Horizontal">
 
                                     <Frame CornerRadius="15" BackgroundColor="{Binding BgColor, Converter={StaticResource BackgroundConverter}}">
                                             <Label Text="{Binding OrderStatus}" FontSize="10" FontAttributes="Bold" />
                                         </Frame>
                                     </StackLayout>-->
 
-                                    <StackLayout>
-                                        <Label Text="{Binding Company}" FontSize="18" TextColor="Black" />
-                                        <Label Text="{Binding FullAdress}" FontSize="18" TextColor="Black" />
-                                        <Label Text="{Binding OrderDescription}" HorizontalOptions="StartAndExpand" FontSize="18" MaxLines="1" LineBreakMode="TailTruncation" TextColor="Black" />
-                                        <Label Text="Tryck för mer info" HorizontalOptions="CenterAndExpand" FontSize="15" Opacity=".7" VerticalOptions="End" />
+                                        <StackLayout>
+                                            <Label Text="{Binding Company}" FontSize="18" TextColor="Black" />
+                                            <Label Text="{Binding FullAdress}" FontSize="18" TextColor="Black" />
+                                            <Label Text="{Binding OrderDescription}" HorizontalOptions="StartAndExpand" FontSize="18" MaxLines="1" LineBreakMode="TailTruncation" TextColor="Black" />
+                                            <Label Text="Tryck för mer info" HorizontalOptions="CenterAndExpand" FontSize="15" Opacity=".7" VerticalOptions="End" />
+                                        </StackLayout>
                                     </StackLayout>
-                                </StackLayout>
-                            </Frame>
-                        </StackLayout>
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-            </CollectionView>
+                                </Frame>
+                            </StackLayout>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+            <!--</RefreshView>-->
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
