--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/StartPage/Login.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/StartPage/Login.razor
@@ -44,9 +44,8 @@
 
                 <!-- Header -->
                 <header class="w3-container w3-center w3-padding-32">
-                    <img src="Images/MAADLOGOTYPE.png" />
-                    @*<h1><b>M A A D  Control Center</b></h1>
-                    <p> <span class="w3-tag">- Välkommen till oss på MAAD -</span></p>*@
+                    <h1><b>M A A D  Control Center</b></h1>
+                    <p> <span class="w3-tag">- Välkommen till oss på MAAD -</span></p>
                 </header>
 
                 <!-- Grid -->
